# bittada_marketplase

./: .editorconfig  .env.example  .gitignore  FIX_SUMMARY.md  Makefile  QUICKSTART.md  SYSTEM_STATUS.md  compile_translations.py  conftest.py  fix_translations.py  i18n_fixer.py  pyproject.toml  restore_base.py  run_local.sh  start.sh  test_register.py
apps/analytics/: admin.py  models.py  selectors.py  tasks.py  urls.py
apps/api/: selectors.py  serializers.py  views.py
apps/auth_methods/: apps.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/billing/: __init__.py  admin.py  models.py  selectors.py  services.py
apps/blacklist/: __init__.py  admin.py  models.py
apps/categories/: admin.py  views.py
apps/chat/: apps.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/dashboard/: views.py
apps/escrow/: apps.py
apps/i18n_extra/: __init__.py  models.py  services.py
apps/integrations/: apps.py  permissions.py  (+3 more)
backend/: ADMIN_GUIDE.txt  API_CONNECTION_TEST.md  LOCAL_SETUP.md  QUICK_START.md  README.md  SINGLE_PORT_SETUP.md  create_admin.py  docker-compose.yml  manage.py  requirements.txt
config/: asgi.py  urls.py  wsgi.py
docs/: AUDIT_REPORT.md  CHANGELOG.md  FRONTEND_BACKEND_ALIGNMENT_REPORT.md  TZ_EN.md
requirements/: base.txt
scratch/: copy_placeholder.py  download_htmx.py
templates/: base.html  base_erp.html  base_htmx.html  cart_erp.html  checkout_erp.html  company_erp.html  customer_profile.html  dashboard_erp.html  escrow_erp.html  home.html  home_erp.html  login_erp.html  manufacturers_erp.html  profile_erp.html  register_erp.html  seller_profile_erp.html  services_erp.html  spa_shell.html  wishlist_erp.html
(+590 files in other folders)
